--- a/src/app/pages/home/movies-list/movies-list.component.css
+++ b/src/app/pages/home/movies-list/movies-list.component.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -30,7 +29,58 @@
   z-index: 99;
   /* background-color: #22282f; */
   /* MASK */
-  background-image: linear-gradient(90deg, rgb(17, 20, 24) 0px, rgba(17, 20, 24, 0.98) 0.97%, rgba(17, 20, 24, 0.94) 2.07833%, rgba(17, 20, 24, 0.88) 3.29667%, rgba(17, 20, 24, 0.8) 4.60167%, rgba(17, 20, 24, 0.71) 5.96667%, rgba(17, 20, 24, 0.61) 7.365%, rgba(17, 20, 24, 0.51) 8.77167%, rgba(17, 20, 24, 0.4) 10.16%, rgba(17, 20, 24, 0.29) 11.505%, rgba(17, 20, 24, 0.2) 12.78%, rgba(17, 20, 24, 0.12) 13.9583%, rgba(17, 20, 24, 0.06) 15.0167%, rgba(17, 20, 24, 0.02) 15.9283%, rgba(17, 20, 24, 0) 16.6667%, rgba(17, 20, 24, 0) 83.3333%, rgba(17, 20, 24, 0.02) 84.0717%, rgba(17, 20, 24, 0.06) 84.9833%, rgba(17, 20, 24, 0.12) 86.0417%, rgba(17, 20, 24, 0.2) 87.22%, rgba(17, 20, 24, 0.29) 88.495%, rgba(17, 20, 24, 0.4) 89.84%, rgba(17, 20, 24, 0.51) 91.2283%, rgba(17, 20, 24, 0.61) 92.635%, rgba(17, 20, 24, 0.71) 94.0333%, rgba(17, 20, 24, 0.8) 95.3983%, rgba(17, 20, 24, 0.88) 96.7033%, rgba(17, 20, 24, 0.94) 97.9217%, rgba(17, 20, 24, 0.98) 99.03%, rgb(17, 20, 24)), linear-gradient(0deg, rgb(17, 20, 24) 0px, rgb(17, 20, 24) 21.4815%, rgba(17, 20, 24, 0.98) 23.637%, rgba(17, 20, 24, 0.94) 26.1%, rgba(17, 20, 24, 0.88) 28.8074%, rgba(17, 20, 24, 0.8) 31.7074%, rgba(17, 20, 24, 0.71) 34.7407%, rgba(17, 20, 24, 0.61) 37.8481%, rgba(17, 20, 24, 0.51) 40.9741%, rgba(17, 20, 24, 0.4) 44.0593%, rgba(17, 20, 24, 0.29) 47.0481%, rgba(17, 20, 24, 0.2) 49.8815%, rgba(17, 20, 24, 0.12) 52.5%, rgba(17, 20, 24, 0.06) 54.8519%, rgba(17, 20, 24, 0.02) 56.8778%, rgba(17, 20, 24, 0) 58.5185%);
+  background-image: linear-gradient(
+      90deg,
+      rgb(17, 20, 24) 0px,
+      rgba(17, 20, 24, 0.98) 0.97%,
+      rgba(17, 20, 24, 0.94) 2.07833%,
+      rgba(17, 20, 24, 0.88) 3.29667%,
+      rgba(17, 20, 24, 0.8) 4.60167%,
+      rgba(17, 20, 24, 0.71) 5.96667%,
+      rgba(17, 20, 24, 0.61) 7.365%,
+      rgba(17, 20, 24, 0.51) 8.77167%,
+      rgba(17, 20, 24, 0.4) 10.16%,
+      rgba(17, 20, 24, 0.29) 11.505%,
+      rgba(17, 20, 24, 0.2) 12.78%,
+      rgba(17, 20, 24, 0.12) 13.9583%,
+      rgba(17, 20, 24, 0.06) 15.0167%,
+      rgba(17, 20, 24, 0.02) 15.9283%,
+      rgba(17, 20, 24, 0) 16.6667%,
+      rgba(17, 20, 24, 0) 83.3333%,
+      rgba(17, 20, 24, 0.02) 84.0717%,
+      rgba(17, 20, 24, 0.06) 84.9833%,
+      rgba(17, 20, 24, 0.12) 86.0417%,
+      rgba(17, 20, 24, 0.2) 87.22%,
+      rgba(17, 20, 24, 0.29) 88.495%,
+      rgba(17, 20, 24, 0.4) 89.84%,
+      rgba(17, 20, 24, 0.51) 91.2283%,
+      rgba(17, 20, 24, 0.61) 92.635%,
+      rgba(17, 20, 24, 0.71) 94.0333%,
+      rgba(17, 20, 24, 0.8) 95.3983%,
+      rgba(17, 20, 24, 0.88) 96.7033%,
+      rgba(17, 20, 24, 0.94) 97.9217%,
+      rgba(17, 20, 24, 0.98) 99.03%,
+      rgb(17, 20, 24)
+    ),
+    linear-gradient(
+      0deg,
+      rgb(17, 20, 24) 0px,
+      rgb(17, 20, 24) 21.4815%,
+      rgba(17, 20, 24, 0.98) 23.637%,
+      rgba(17, 20, 24, 0.94) 26.1%,
+      rgba(17, 20, 24, 0.88) 28.8074%,
+      rgba(17, 20, 24, 0.8) 31.7074%,
+      rgba(17, 20, 24, 0.71) 34.7407%,
+      rgba(17, 20, 24, 0.61) 37.8481%,
+      rgba(17, 20, 24, 0.51) 40.9741%,
+      rgba(17, 20, 24, 0.4) 44.0593%,
+      rgba(17, 20, 24, 0.29) 47.0481%,
+      rgba(17, 20, 24, 0.2) 49.8815%,
+      rgba(17, 20, 24, 0.12) 52.5%,
+      rgba(17, 20, 24, 0.06) 54.8519%,
+      rgba(17, 20, 24, 0.02) 56.8778%,
+      rgba(17, 20, 24, 0) 58.5185%
+    );
 }
 
 :host ::ng-deep .list app-movie-card img {
@@ -49,6 +99,7 @@ section {
   align-self: center;
   position: relative;
   width: fit-content;
+  font-family: "Rajdhani", sans-serif;
 }
 .title::after {
   content: "";
@@ -73,7 +124,6 @@ section {
   /* grid-template-columns: repeat(auto-fill, minmax(150px, 150px)); */
   grid-template-columns: repeat(auto-fill, minmax(120px, 120px));
   gap: 32px;
-
 }
 @media (max-width: 991px) {
   .list {
@@ -85,11 +135,10 @@ section {
   .backdrop {
     height: 40% !important;
   }
-  :host ::ng-deep .list app-movie-card .movie-card{
+  :host ::ng-deep .list app-movie-card .movie-card {
     width: 90px;
   }
 }
-
 
 ul {
   list-style: none;
@@ -123,7 +172,7 @@ ul {
   position: absolute;
   font-size: 26px;
   top: 50%;
-  transform: translate(0 ,-50%);
+  transform: translate(0, -50%);
   z-index: 99;
   cursor: pointer;
 }
@@ -150,7 +199,7 @@ ul {
   overflow: hidden;
   position: relative;
   left: 50%;
-  transform: translate(-50% ,0);
+  transform: translate(-50%, 0);
   padding-top: 5px;
 }
 .slider-movies {
@@ -164,7 +213,7 @@ ul {
   padding: 0px;
 }
 /* left: -55.2rem; */
-.slider-movie .movie-card{
+.slider-movie .movie-card {
   width: 150px;
 }
 
@@ -184,7 +233,6 @@ ul {
   justify-content: center;
   display: flex;
   align-items: center;
-
 }
 .pagination > button:disabled {
   color: #213836;
@@ -195,7 +243,6 @@ ul {
   background-color: #333;
   color: #fff;
   padding: 50px 0;
-
 }
 
 .site-footer h3 {
@@ -247,6 +294,3 @@ ul {
 .social-icons li a:hover {
   color: #fff;
 }
-
-
-
