--- a/src/app/pages/movie-details-page/movie-details-page.component.css
+++ b/src/app/pages/movie-details-page/movie-details-page.component.css
@@ -8,7 +8,7 @@
   color: #b0aba0;
 }
 
-:host ::ng-deep app-header .header{
+:host ::ng-deep app-header .header {
   background-color: transparent;
 }
 .backdrop-holder {
@@ -34,7 +34,58 @@
   z-index: 99;
   /* background-color: #22282f; */
   /* MASK */
-  background-image: linear-gradient(90deg, rgb(17, 20, 24) 0px, rgba(17, 20, 24, 0.98) 0.97%, rgba(17, 20, 24, 0.94) 2.07833%, rgba(17, 20, 24, 0.88) 3.29667%, rgba(17, 20, 24, 0.8) 4.60167%, rgba(17, 20, 24, 0.71) 5.96667%, rgba(17, 20, 24, 0.61) 7.365%, rgba(17, 20, 24, 0.51) 8.77167%, rgba(17, 20, 24, 0.4) 10.16%, rgba(17, 20, 24, 0.29) 11.505%, rgba(17, 20, 24, 0.2) 12.78%, rgba(17, 20, 24, 0.12) 13.9583%, rgba(17, 20, 24, 0.06) 15.0167%, rgba(17, 20, 24, 0.02) 15.9283%, rgba(17, 20, 24, 0) 16.6667%, rgba(17, 20, 24, 0) 83.3333%, rgba(17, 20, 24, 0.02) 84.0717%, rgba(17, 20, 24, 0.06) 84.9833%, rgba(17, 20, 24, 0.12) 86.0417%, rgba(17, 20, 24, 0.2) 87.22%, rgba(17, 20, 24, 0.29) 88.495%, rgba(17, 20, 24, 0.4) 89.84%, rgba(17, 20, 24, 0.51) 91.2283%, rgba(17, 20, 24, 0.61) 92.635%, rgba(17, 20, 24, 0.71) 94.0333%, rgba(17, 20, 24, 0.8) 95.3983%, rgba(17, 20, 24, 0.88) 96.7033%, rgba(17, 20, 24, 0.94) 97.9217%, rgba(17, 20, 24, 0.98) 99.03%, rgb(17, 20, 24)), linear-gradient(0deg, rgb(17, 20, 24) 0px, rgb(17, 20, 24) 21.4815%, rgba(17, 20, 24, 0.98) 23.637%, rgba(17, 20, 24, 0.94) 26.1%, rgba(17, 20, 24, 0.88) 28.8074%, rgba(17, 20, 24, 0.8) 31.7074%, rgba(17, 20, 24, 0.71) 34.7407%, rgba(17, 20, 24, 0.61) 37.8481%, rgba(17, 20, 24, 0.51) 40.9741%, rgba(17, 20, 24, 0.4) 44.0593%, rgba(17, 20, 24, 0.29) 47.0481%, rgba(17, 20, 24, 0.2) 49.8815%, rgba(17, 20, 24, 0.12) 52.5%, rgba(17, 20, 24, 0.06) 54.8519%, rgba(17, 20, 24, 0.02) 56.8778%, rgba(17, 20, 24, 0) 58.5185%);
+  background-image: linear-gradient(
+      90deg,
+      rgb(17, 20, 24) 0px,
+      rgba(17, 20, 24, 0.98) 0.97%,
+      rgba(17, 20, 24, 0.94) 2.07833%,
+      rgba(17, 20, 24, 0.88) 3.29667%,
+      rgba(17, 20, 24, 0.8) 4.60167%,
+      rgba(17, 20, 24, 0.71) 5.96667%,
+      rgba(17, 20, 24, 0.61) 7.365%,
+      rgba(17, 20, 24, 0.51) 8.77167%,
+      rgba(17, 20, 24, 0.4) 10.16%,
+      rgba(17, 20, 24, 0.29) 11.505%,
+      rgba(17, 20, 24, 0.2) 12.78%,
+      rgba(17, 20, 24, 0.12) 13.9583%,
+      rgba(17, 20, 24, 0.06) 15.0167%,
+      rgba(17, 20, 24, 0.02) 15.9283%,
+      rgba(17, 20, 24, 0) 16.6667%,
+      rgba(17, 20, 24, 0) 83.3333%,
+      rgba(17, 20, 24, 0.02) 84.0717%,
+      rgba(17, 20, 24, 0.06) 84.9833%,
+      rgba(17, 20, 24, 0.12) 86.0417%,
+      rgba(17, 20, 24, 0.2) 87.22%,
+      rgba(17, 20, 24, 0.29) 88.495%,
+      rgba(17, 20, 24, 0.4) 89.84%,
+      rgba(17, 20, 24, 0.51) 91.2283%,
+      rgba(17, 20, 24, 0.61) 92.635%,
+      rgba(17, 20, 24, 0.71) 94.0333%,
+      rgba(17, 20, 24, 0.8) 95.3983%,
+      rgba(17, 20, 24, 0.88) 96.7033%,
+      rgba(17, 20, 24, 0.94) 97.9217%,
+      rgba(17, 20, 24, 0.98) 99.03%,
+      rgb(17, 20, 24)
+    ),
+    linear-gradient(
+      0deg,
+      rgb(17, 20, 24) 0px,
+      rgb(17, 20, 24) 21.4815%,
+      rgba(17, 20, 24, 0.98) 23.637%,
+      rgba(17, 20, 24, 0.94) 26.1%,
+      rgba(17, 20, 24, 0.88) 28.8074%,
+      rgba(17, 20, 24, 0.8) 31.7074%,
+      rgba(17, 20, 24, 0.71) 34.7407%,
+      rgba(17, 20, 24, 0.61) 37.8481%,
+      rgba(17, 20, 24, 0.51) 40.9741%,
+      rgba(17, 20, 24, 0.4) 44.0593%,
+      rgba(17, 20, 24, 0.29) 47.0481%,
+      rgba(17, 20, 24, 0.2) 49.8815%,
+      rgba(17, 20, 24, 0.12) 52.5%,
+      rgba(17, 20, 24, 0.06) 54.8519%,
+      rgba(17, 20, 24, 0.02) 56.8778%,
+      rgba(17, 20, 24, 0) 58.5185%
+    );
 }
 .movie-info {
   position: absolute;
@@ -77,11 +128,13 @@
 }
 
 .title-holder {
- display: flex;
- align-items: center;
- gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-family: "Rajdhani", sans-serif;
+  font-weight: bold;
 }
-.movie-info .holder .title-holder{
+.movie-info .holder .title-holder {
   display: none;
 }
 .title-holder .movie-name {
@@ -190,15 +243,15 @@ a {
   background-color: #394756;
   border-radius: 5px;
 }
-.movie-info .holder .options{
+.movie-info .holder .options {
   display: none;
   margin-top: 30px;
 }
 @media (max-width: 1200px) {
-  .movie-info .holder .options{
+  .movie-info .holder .options {
     display: flex;
   }
-  .movie-info .options{
+  .movie-info .options {
     display: none;
   }
 }
@@ -235,13 +288,12 @@ a {
   justify-content: center;
 }
 @media (max-width: 1200px) {
-  .movie-info .holder .options{
+  .movie-info .holder .options {
     display: flex;
   }
-  .movie-info .options{
+  .movie-info .options {
     display: none;
   }
-
 }
 /*
 // Image
@@ -252,72 +304,68 @@ z-index: -10;
 
     */
 
+/* Slider */
 
+ul {
+  list-style: none;
+}
 
+.slider {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  left: -15px;
+}
+.slider .trending {
+  gap: 30px;
+}
 
-    /* Slider */
-
-    ul {
-      list-style: none;
-    }
-
-
-    .slider {
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-      left: -15px;
-    }
-    .slider .trending {
-      gap: 30px;
-    }
-
-    :host ::ng-deep .slider app-movie-card .movie-card {
-      /* in silder only */
-      width: 150px;
-    }
-    .slider i {
-      position: absolute;
-      font-size: 26px;
-      top: 50%;
-      transform: translate(0 ,-50%);
-      z-index: 99;
-      cursor: pointer;
-    }
-    .slider i.left {
-      left: -4%;
-    }
-    .slider i.right {
-      right: -4%;
-    }
-    .slider i:hover {
-      color: #5c6179;
-    }
-    /* Responsive ######needed */
-    .slider-holder {
-      margin: 50px 0 50px 0;
-      width: 900px;
-      background-color: transparent;
-      overflow: hidden;
-      position: relative;
-      left: 50%;
-      transform: translate(-50% ,0);
-      padding-top: 5px;
-    }
-    .slider-movies {
-      display: flex;
-      position: relative;
-      /* left: -910px; */
-      align-content: center;
-      transition: 1s;
-      left: 15px;
-      margin: 0px;
-      padding: 0px;
-    }
-    /* left: -55.2rem; */
-    .slider-movie .movie-card{
-      width: 150px;
-    }
+:host ::ng-deep .slider app-movie-card .movie-card {
+  /* in silder only */
+  width: 150px;
+}
+.slider i {
+  position: absolute;
+  font-size: 26px;
+  top: 50%;
+  transform: translate(0, -50%);
+  z-index: 99;
+  cursor: pointer;
+}
+.slider i.left {
+  left: -4%;
+}
+.slider i.right {
+  right: -4%;
+}
+.slider i:hover {
+  color: #5c6179;
+}
+/* Responsive ######needed */
+.slider-holder {
+  margin: 50px 0 50px 0;
+  width: 900px;
+  background-color: transparent;
+  overflow: hidden;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding-top: 5px;
+}
+.slider-movies {
+  display: flex;
+  position: relative;
+  /* left: -910px; */
+  align-content: center;
+  transition: 1s;
+  left: 15px;
+  margin: 0px;
+  padding: 0px;
+}
+/* left: -55.2rem; */
+.slider-movie .movie-card {
+  width: 150px;
+}
 
 /* #00e054 */
 button .green-color {
@@ -365,7 +413,7 @@ button .blue-color {
   .movie-info .holder .options {
     display: none;
   }
-  .movie-info .holder .title-holder{
+  .movie-info .holder .title-holder {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -381,15 +429,15 @@ button .blue-color {
   .movie-info .holder .title-holder .trailer-link {
     align-self: start;
   }
-  .poster{
+  .poster {
     width: 120px;
     margin-bottom: 20px;
     margin-right: 10px;
   }
-  .description{
+  .description {
     width: 100%;
   }
-  .description .title-holder{
+  .description .title-holder {
     display: none;
   }
 }
