--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -1,44 +1,34 @@
-  <div class="movie-card" [title]="movie.name">
+<div class="movie-card" [title]="movie.name">
 
-    <span class="rating">{{ movie.rating }}</span>
-    <img [routerLink]="['/movie', movie.name]" [state]="{id: movie.id}" class="img-fluid poster" [src]="movie.posterimagePath" alt="image">
-        <ul class="card-options">
-          <!-- onAddToWatched -->
-          <li *ngIf="watchedButton">
-            <button (click)="onAddToWatched(movie)">
-              <fa-icon
-              class="button-icon"
-              [ngClass]="{ 'green-color' : watchedToggleClass }"
-              style="color: rgb(161, 163, 160);"
-              [icon]="faAdd">
-              </fa-icon>
-            </button>
-          </li>
-          <!-- onAddToFavorites -->
-          <li *ngIf="favoriteButton">
-            <button (click)="onAddToFavorites(movie)">
-              <fa-icon
-              class="button-icon"
-              [ngClass]="{ 'red-color' : favoriteToggleClass }"
-              style="color: rgb(161, 163, 160);"
-              [icon]="faLove">
-              </fa-icon>
-            </button>
-          </li>
-          <!-- onAddToWatchlist -->
-          <li *ngIf="watchlistButton">
-            <button (click)="onAddToWatchlist(movie)">
-              <fa-icon
-              class="button-icon"
-              [ngClass]="{ 'blue-color' : watchlistToggleClass }"
-              style="color: rgb(161, 163, 160);"
-              [icon]="faEye">
-              </fa-icon>
-            </button>
-          </li>
-          <li *ngIf="deleteButton"><button class="delete-button" (click)="deleteMovie(movie, componentName)">❌</button></li>
-        </ul>
-        <div class="disable-cover"></div>
-    </div>
-
-
+  <span class="rating"> <fa-icon style="color: #ffd700bd;" [icon]="faStar"></fa-icon>{{ movie.rating }}</span>
+  <img [routerLink]="['/movie', movie.name]" [state]="{id: movie.id}" class="img-fluid poster"
+    [src]="movie.posterimagePath" alt="image">
+  <ul class="card-options">
+    <!-- onAddToWatched -->
+    <li *ngIf="watchedButton">
+      <button (click)="onAddToWatched(movie)">
+        <fa-icon class="button-icon" [ngClass]="{ 'green-color' : watchedToggleClass }"
+          style="color: rgb(161, 163, 160);" [icon]="faAdd">
+        </fa-icon>
+      </button>
+    </li>
+    <!-- onAddToFavorites -->
+    <li *ngIf="favoriteButton">
+      <button (click)="onAddToFavorites(movie)">
+        <fa-icon class="button-icon" [ngClass]="{ 'red-color' : favoriteToggleClass }"
+          style="color: rgb(161, 163, 160);" [icon]="faLove">
+        </fa-icon>
+      </button>
+    </li>
+    <!-- onAddToWatchlist -->
+    <li *ngIf="watchlistButton">
+      <button (click)="onAddToWatchlist(movie)">
+        <fa-icon class="button-icon" [ngClass]="{ 'blue-color' : watchlistToggleClass }"
+          style="color: rgb(161, 163, 160);" [icon]="faEye">
+        </fa-icon>
+      </button>
+    </li>
+    <li *ngIf="deleteButton"><button class="delete-button" (click)="deleteMovie(movie, componentName)">❌</button></li>
+  </ul>
+  <div class="disable-cover"></div>
+</div>
