--- a/src/app/core/layout/nav-menu/nav-menu.component.html
+++ b/src/app/core/layout/nav-menu/nav-menu.component.html
@@ -1,5 +1,7 @@
 <div class="nav-menu">
-  <p>Movies Guide</p>
+  <div class="logo">
+    <img src="/assets/logo_1.png" alt="">
+  </div>
   <ul class="links">
     <li class="link"><a href="/home">Home</a></li>
     <li class="link"><a href="lists/watched">Watched</a></li>
@@ -8,12 +10,12 @@
   </ul>
   <div id="gnavi" class="nav" (click)="toggleNavBtn()">
     <div class="nav-btn">
-          <span class="bars">
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
-              <span class="bar"></span>
-          </span>
+      <span class="bars">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </span>
     </div>
-</div>
+  </div>
 </div>
