--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
 </div>
-
+<!-- <app-footer style="position: relative;"></app-footer> -->
 <!-- <footer class="site-footer">
   <div class="container">
     <div class="row">
