--- a/src/app/core/layout/footer/footer.component.css
+++ b/src/app/core/layout/footer/footer.component.css
@@ -7,12 +7,12 @@
 footer {
   background-color: #1d232a;
   color: #fff;
-  padding: 10px;
+  padding: 40px 10px;
   text-align: center;
   background: url("/assets/footer_bg.jpg");
 }
 .logo {
-  width: 40px;
+  width: 50px;
   display: flex;
   flex-direction: row;
   gap: 10px;
