--- a/src/app/core/layout/header/header.component.css
+++ b/src/app/core/layout/header/header.component.css
@@ -82,6 +82,10 @@
   border: #4d4d4d 1px solid;
   background-color: #111418;
   color: #5a6474;
+  transition: 0.3s;
+}
+.search-btn:hover {
+  background-color: #2b3035;
 }
 .links {
   /* normalize */
