--- a/src/app/pages/lists/watched/watched.component.css
+++ b/src/app/pages/lists/watched/watched.component.css
@@ -1,3 +1,8 @@
+h5 {
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 600;
+}
+
 .list {
   display: grid;
   justify-content: center;
@@ -8,7 +13,7 @@
 :host ::ng-deep app-movie-card .movie-card {
   width: 115px;
 }
-:host ::ng-deep app-nav-menu .nav-menu{
+:host ::ng-deep app-nav-menu .nav-menu {
   left: 0;
   background-color: red;
 }
