--- a/src/app/pages/lists/watchlist/watchlist.component.css
+++ b/src/app/pages/lists/watchlist/watchlist.component.css
@@ -1,3 +1,8 @@
+h5 {
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 600;
+}
+
 .list {
   display: grid;
   justify-content: center;
@@ -15,7 +20,6 @@ ul {
   position: relative;
   bottom: 20px;
   gap: 5px;
-
 }
 .movie-card {
   cursor: pointer;
