--- a/src/app/shared/components/movie-card/movie-card.component.html
+++ b/src/app/shared/components/movie-card/movie-card.component.html
@@ -28,7 +28,11 @@
         </fa-icon>
       </button>
     </li>
-    <li *ngIf="deleteButton"><button class="delete-button" (click)="deleteMovie(movie, componentName)">❌</button></li>
+    <li *ngIf="deleteButton">
+      <button class="delete-button" (click)="deleteMovie(movie, componentName)">
+        <fa-icon class="button-icon" style="color: rgb(240, 7, 7);" [icon]="faTrash"></fa-icon>
+      </button>
+    </li>
   </ul>
   <div class="disable-cover"></div>
 </div>
