--- a/src/app/core/auth/auth.component.html
+++ b/src/app/core/auth/auth.component.html
@@ -1,44 +1,44 @@
 <div class="container">
-  <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
-    <p>{{ isSignInMode ? 'Login' : 'Sign Up'}}</p>
-    <!-- <label *ngIf="!isSignInMode" for="first-name">first</label>
-    <input
-    *ngIf="!isSignInMode"
-    class="form-control"
-    name="first-name"
-    type="text"
-    required
-    ngModel
-    >
-    <label *ngIf="!isSignInMode" for="last-name">last</label>
-    <input
-    *ngIf="!isSignInMode"
-    class="form-control"
-    name="last-name"
-    type="text"
-    required
-    ngModel
-    > -->
-    <label for="email">Email</label>
-    <input
-    class="form-control"
-    name="email"
-    type="email"
-    email
-    required
-    ngModel
-    >
-    <label for="password">Password</label>
-    <input
-    class="form-control"
-    name="password"
-    type="password"
-    required
-    ngModel
-    >
-    <small>{{ errorMessage }} </small>
-    <button class="btn" type="submit">{{ isSignInMode ? 'Login' : 'Sign Up'}}</button>
-    <span>-- or --</span>
-    <button class="btn" type="button" (click)="onSwitchMode()">{{ isSignInMode ? 'Switch to Sign Up' : 'Switch to Login'}}</button>
+  <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" class="auth-form">
+    <h2 class="form-title">{{ isSignInMode ? 'Welcome Back' : 'Create Account'}}</h2>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input class="form-control" id="email" name="email" type="email" email required ngModel
+        placeholder="Enter your email">
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input class="form-control" id="password" name="password" type="password" required ngModel
+        placeholder="Enter your password">
+    </div>
+
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
+
+    <button class="btn btn-primary" type="submit">
+      {{ isSignInMode ? 'Login' : 'Sign Up' }}
+    </button>
+
+    <div class="divider">
+      <span class="divider-line"></span>
+      <span class="divider-text">or</span>
+      <span class="divider-line"></span>
+    </div>
+
+    <button class="btn btn-secondary" type="button" (click)="onSwitchMode()">
+      {{ isSignInMode ? 'Create new account' : 'Already have an account?' }}
+    </button>
   </form>
+  <button *ngIf="isShowEmail" (click)="toggleDefaultEmail()" class="expand"><span
+      class="material-symbols-outlined">expand_less</span></button>
+  <button *ngIf="!isShowEmail" (click)="toggleDefaultEmail()" class="expand"><span
+      class="material-symbols-outlined">expand_more</span></button>
+  <div *ngIf="isShowEmail" class="text">
+    <p>email: test@test.com</p>
+    <p>password: 123456</p>
+    <p>or sign up</p>
+  </div>
 </div>
